added add and remove paragraphs functionality

--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
 		<button id="addParagraphs">Ajouter des paragraphes</button>
 		<button id="removeParagraphs">Enlever des paragraphes</button>
 		<script>
+			// Constants for elements
 			const button = document.getElementById('addParagraphs');
 			const button2 = document.getElementById('removeParagraphs');
-			const cell = document.getElementById('cell');
+			const tableOfTache = document.getElementById('table_taches');
+			const cellsOfTableTache = tableOfTache.getElementsByTagName('td');
 			function addParagraphs() {
 				let paragraph = document.createElement('p');
 				paragraph.innerHTML = 'Hello World';
@@ -67,14 +69,19 @@
 			function removeParagraphs() {
 				this.remove();
 			}
+			// Add Events
 			function addEvents() {
-				cell.addEventListener('click', addParagraphs);
+				for (const cell of cellsOfTableTache) {
+					cell.addEventListener('click', addParagraphs);
+				}
 			}
 			function removeEvents() {
-				cell.removeEventListener('click', addParagraphs);
-				let paragraphs = cell.getElementsByTagName('p');
-				for (let i = 0; i < paragraphs.length; ++i) {
-					paragraphs[i].addEventListener('click', removeParagraphs);
+				for (const cell of cellsOfTableTache) {
+					cell.removeEventListener('click', addParagraphs);
+					let paragraphs = cell.getElementsByTagName('p');
+					for (let i = 0; i < paragraphs.length; ++i) {
+						paragraphs[i].addEventListener('click', removeParagraphs);
+					}
 				}
 			}
 			button.addEventListener('click', addEvents);
