--- a/index.html
+++ b/index.html
@@ -7,55 +7,57 @@
 		<title>Web Planner</title>
 	</head>
 	<body>
-		<h2>Taches</h2>
-		<table border="1px solid" id="table_taches">
-			<tbody>
-				<tr>
-					<th>Jour</th>
-					<th>Lundi</th>
-					<th>Mardi</th>
-					<th>Mercredi</th>
-					<th>Jeudi</th>
-					<th>Vendredi</th>
-					<th>Samedi</th>
-					<th>Dimanche</th>
-				</tr>
-				<tr>
-					<td>Priorite Une</td>
-					<td id="cell"></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td>Priorite Deux</td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td>Priorite Trois</td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-			</tbody>
-		</table>
+		<div id="div_table_tache">
+			<h2>Taches</h2>
+			<table border="1px solid" id="table_taches">
+				<tbody>
+					<tr>
+						<th>Jour</th>
+						<th>Lundi</th>
+						<th>Mardi</th>
+						<th>Mercredi</th>
+						<th>Jeudi</th>
+						<th>Vendredi</th>
+						<th>Samedi</th>
+						<th>Dimanche</th>
+					</tr>
+					<tr>
+						<td>Priorite Une</td>
+						<td id="cell"></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Priorite Deux</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Priorite Trois</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</tbody>
+			</table>
 
-		<button id="addParagraphs">Ajouter des paragraphes</button>
-		<button id="removeParagraphs">Enlever des paragraphes</button>
-		<script src="js/Events.js"></script>
-		<script src="js/paragraph.js"></script>
+			<button id="addParagraphs">Ajouter des paragraphes</button>
+			<button id="removeParagraphs">Enlever des paragraphes</button>
+			<script src="js/Events.js"></script>
+			<script src="js/paragraph.js"></script>
+		</div>
 	</body>
 </html>
