Replaced removeParagraphs() by strikeThroughParagraphs()

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 			</table>
 
 			<button id="addParagraphs">Ajouter des paragraphes</button>
-			<button id="removeParagraphs">Enlever des paragraphes</button>
+			<button id="strikeThroughParagraphs">Tache terminee</button>
+			<button id="removeParagraphs">Enlever paragraphes</button>
 			<script src="js/Events.js"></script>
 			<script src="js/paragraph.js"></script>
 		</div>
