added Remove Event button

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			</table>
 			<button id="addParagraphs">Ajouter des paragraphes</button>
 			<button id="strikeThroughParagraphs">Tache terminee</button>
+			<button id="removeEvents">Enlever events</button>
 			<script src="js/Events.js"></script>
 			<script src="js/paragraph.js"></script>
 		</div>
